# qsftp

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  compile.sh  install.sh  install_local.sh
.github/workflows/: release.yml
src/: auth.rs  cert.rs  client.rs  lib.rs  protocol.rs  server.rs  ssh_auth.rs
